<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>loom-cortex-actions</artifactId>
    <packaging>pom</packaging>

    <parent>
        <groupId>io.metaloom.loom.cortex</groupId>
        <artifactId>loom-cortex</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <modules>
        <module>hash</module>
        <module>dedup</module>
        <module>thumbnail</module>
        <module>consistency</module>
        <module>fingerprint</module>
        <module>facedetect</module>
        <module>scene-detection</module>
        <module>ocr</module>
        <module>tika</module>
    </modules>

    <name>Loom - Cortex :: Actions</name>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.metaloom.loom</groupId>
                <artifactId>loom-bom</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>io.metaloom.loom.cortex</groupId>
            <artifactId>loom-cortex-common</artifactId>
        </dependency>

        <!--Test -->
        <dependency>
            <groupId>io.metaloom.loom.cortex</groupId>
            <artifactId>loom-cortex-common</artifactId>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>21</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.dagger</groupId>
                            <artifactId>dagger-compiler</artifactId>
                            <version>${dagger.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.google.dagger</groupId>
                        <artifactId>dagger-compiler</artifactId>
                        <version>${dagger.version}</version>
                        <optional>true</optional>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>